.vendor/dislin/julia/Dislin.jl


function qplcrv(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64,
                s::String)
  ccall((:qplcrv, "libdislin_d.so"), Cvoid, 
         (Ptr{Float64}, Ptr{Float64}, Int32, Ptr{UInt8}), xray, yray, n, s)
end

function qplot(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64)
  ccall((:qplot, "libdislin_d.so"), Cvoid, 
         (Ptr{Float64}, Ptr{Float64}, Int32), xray, yray, n)
end

function qplpie(xray::Vector{Float64}, n::Int64)
  ccall((:qplpie, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32), xray, n)
end

function qplsca(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64)
  ccall((:qplsca, "libdislin_d.so"), Cvoid, 
         (Ptr{Float64}, Ptr{Float64}, Int32), xray, yray, n)
end

#void  qplscl (double a, double e, double org, double stp, const char *copt);

function qplsur(zmat::Array{Float64, 2}, n::Int64, m::Int64)
  z = transpose(zmat)
  ccall((:qplsur, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Int32, Int32), 
          z, n, m)
  z = 0  # free z
end

function quad3d(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
              x5::Float64, x6::Float64)
  ccall((:quad3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64), x1, x2, x3, x4, x5, x6)
end

function rbfpng(iray::Vector{UInt8}, nmax::Int64) 
  n = ccall((:rbfpng, "libdislin_d.so"), Int32, (Ptr{UInt8}, Int32),
          iray, nmax)
  return convert(Int64, n)
end

function rbmp(s::String)
  ccall((:rbmp, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function readfl(i1::Int64, iray::Vector{UInt8}, i2::Int64) 
  n = ccall((:readfl, "libdislin_d.so"), Int32, (Int32, Ptr{UInt8}, Int32),
          i1, iray, i2)
  return convert(Int64, n)
end

function reawgt()
  ccall((:reawgt, "libdislin_d.so"), Cvoid, ())
end

function recfll(i1::Int64, i2::Int64, i3::Int64, i4::Int64, i5::Int64)
  ccall((:recfll, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4, i5)
end

function rectan(i1::Int64, i2::Int64, i3::Int64, i4::Int64)
  ccall((:rectan, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4)
end

function rel3pt(x1::Float64, x2::Float64, x3::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  ccall((:rel3pt, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, x3, xp1, xp2)
  return xp1[1], xp2[1]
end

function resatt()
  ccall((:resatt, "libdislin_d.so"), Cvoid, ())
end

function reset(s::String)
  ccall((:reset, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function revscr()
  ccall((:revscr, "libdislin_d.so"), Cvoid, ())
end

function rgbhsv(x1::Float64, x2::Float64, x3::Float64)
  xp1 = Cdouble[0]
  xp2 = Cdouble[0]
  xp3 = Cdouble[0]
  ccall((:rgbhsv, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Ptr{Cdouble}, Ptr{Cdouble}, Ptr{Cdouble}), x1, x2, x3, xp1, xp2, xp3)
  return xp1[1], xp2[1], xp3[1] 
end

function rgif(s::String)
  ccall((:rgif, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function rgtlab()
  ccall((:rgtlab, "libdislin_d.so"), Cvoid, ())
end

function rimage(s::String)
  ccall((:rimage, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function rlarc(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
              x5::Float64, x6::Float64, x7::Float64)
  ccall((:rlarc, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Float64), x1, x2, x3, x4, x5, x6, x7)
end

function rlarea(xray::Vector{Float64}, yray::Vector{Float64}, n::Int64)
  ccall((:rlarea, "libdislin_d.so"), Cvoid, 
         (Ptr{Float64}, Ptr{Float64}, Int32), xray, yray, n)
end

function rlcirc(x1::Float64, x2::Float64, x3::Float64)
  ccall((:rlcirc, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
          x1, x2, x3)
end

function rlconn(x1::Float64, x2::Float64)
  ccall((:rlconn, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function rlell(x1::Float64, x2::Float64, x3::Float64, x4::Float64)
  ccall((:rlell, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64, Float64), 
          x1, x2, x3, x4)
end

function rline(x1::Float64, x2::Float64, x3::Float64, x4::Float64)
  ccall((:rline, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64, Float64), 
          x1, x2, x3, x4)
end

function rlmess(s::String, x1::Float64, x2::Float64)
  ccall((:rlmess, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Float64, Float64), 
          s, x1, x2)
end

function rlnumb(x1::Float64, i::Int64, x2::Float64, x3::Float64)
  ccall((:rlnumb, "libdislin_d.so"), Cvoid, (Float64, Int32, Float64, Float64), 
          x1, i, x2, x3)
end

function rlpie(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
              x5::Float64)
  ccall((:rlpie, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64), x1, x2, x3, x4, x5)
end

function rlpoin(x1::Float64, x2::Float64, i1::Int64, i2::Int64,
              i3::Int64)
  ccall((:rlpoin, "libdislin_d.so"), Cvoid, (Float64, Float64, Int32,
          Int32, Int32), x1, x2, i1, i2, i3)
end

function rlrec(x1::Float64, x2::Float64, x3::Float64, x4::Float64)
  ccall((:rlrec, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64, Float64), 
          x1, x2, x3, x4)
end

function rlrnd(x1::Float64, x2::Float64, x3::Float64, x4::Float64, i::Int64)
  ccall((:rlrnd, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Int32), x1, x2, x3, x4, i)
end

function rlsec(x1::Float64, x2::Float64, x3::Float64, x4::Float64,
              x5::Float64, x6::Float64, i::Int64)
  ccall((:rlsec, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Float64, Float64, Int32), x1, x2, x3, x4, x5, x6, i)
end

function rlstrt(x1::Float64, x2::Float64)
  ccall((:rlstrt, "libdislin_d.so"), Cvoid, (Float64, Float64), x1, x2)
end

function rlsymb(i::Int64, x1::Float64, x2::Float64)
  ccall((:rlsymb, "libdislin_d.so"), Cvoid, (Int32, Float64, Float64), i, x1, x2)
end

function rlvec(x1::Float64, x2::Float64, x3::Float64, x4::Float64, i::Int64)
  ccall((:rlvec, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Float64, Int32), x1, x2, x3, x4, i)
end

function rlwind(x1::Float64, x2::Float64, x3::Float64, i::Int64, x4::Float64)
  ccall((:rlwind, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64,
          Int32, Float64), x1, x2, x3, i, x4)
end

function rndrec(i1::Int64, i2::Int64, i3::Int64, i4::Int64, i5::Int64)
  ccall((:rndrec, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32, Int32), 
           i1, i2, i3, i4, i5)
end

function rot3d(x1::Float64, x2::Float64, x3::Float64)
  ccall((:rot3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
          x1, x2, x3)
end

function rpixel(i1::Int64, i2::Int64)
  iclr = Cint[0]
  ccall((:rpixel, "libdislin_d.so"), Cvoid, (Int32, Int32, Ptr{Cint}), 
          i1, i2, iclr)
  return convert(Int64, iclr[1])
end

function rpixls(iray::Vector{UInt8}, i1::Int64, i2::Int64, i3::Int64, 
                i4::Int64)
  ccall((:rpixls, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Int32, Int32, Int32, 
          Int32), iray, i1, i2, i3, i4)
end

function rpng(s::String)
  ccall((:rpng, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function rppm(s::String)
  ccall((:rppm, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function rpxrow(iray::Vector{UInt8}, i1::Int64, i2::Int64, i3::Int64) 
  ccall((:rpxrow, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Int32, Int32, Int32),
          iray, i1, i2, i3)
end

function rtiff(s::String)
  ccall((:rtiff, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function rvynam()
  ccall((:rvynam, "libdislin_d.so"), Cvoid, ())
end

function scale(s1::String, s2::String)
  ccall((:scale, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function sclfac(x::Float64)
  ccall((:sclfac, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function sclmod(s::String)
  ccall((:sclmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function scrmod(s::String)
  ccall((:scrmod, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function sector(i1::Int64, i2::Int64, i3::Int64, i4::Int64, x1::Float64,
                x2::Float64, i5::Int64)
  ccall((:sector, "libdislin_d.so"), Cvoid, (Int32, Int32, Int32, Int32, Float64,
          Float64, Int32), i1, i2, i3, i4, x1, x2, i5)
end

function selwin(i::Int64)
  ccall((:selwin, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function sendbf()
  ccall((:sendbf, "libdislin_d.so"), Cvoid, ())
end

function sendmb()
  ccall((:sendmb, "libdislin_d.so"), Cvoid, ())
end

function sendok()
  ccall((:sendok, "libdislin_d.so"), Cvoid, ())
end

function serif()
  ccall((:serif, "libdislin_d.so"), Cvoid, ())
end

function setbas(x::Float64)
  ccall((:setbas, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function setcbk(func::Function, s::String)
  func_c = @cfunction $func Cvoid (Ptr{Cdouble}, Ptr{Cdouble}) 
  ccall((:setcbk, "libdislin_d.so"), Cvoid, (Ptr{Cvoid}, Ptr{UInt8}), 
          func_c, s)
end

function setclr(i::Int64)
  ccall((:setclr, "libdislin_d.so"), Cvoid, (Int32,), i)
end

function setscr(s::String)
  ccall((:setscr, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function setexp(x::Float64)
  ccall((:setexp, "libdislin_d.so"), Cvoid, (Float64,), x)
end

function setfce(s::String)
  ccall((:setfce, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function setfil(s::String)
  ccall((:setfil, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function setgrf(s1::String, s2::String, s3::String, 
                s4::String)
  ccall((:setgrf, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}, Ptr{UInt8},
          Ptr{UInt8}), s1, s2, s3, s4)
end

function setind(i::Int64, x1::Float64, x2::Float64, x3::Float64)
  ccall((:setind, "libdislin_d.so"), Cvoid, (Int32, Float64, Float64, Float64), 
           i, x1, x2, x3)
end

function setmix(s1::String, s2::String)
  ccall((:setmix, "libdislin_d.so"), Cvoid, (Ptr{UInt8}, Ptr{UInt8}), s1, s2)
end

function setpag(s::String)
  ccall((:setpag, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function setres(i1::Int64, i2::Int64)
  ccall((:setres, "libdislin_d.so"), Cvoid, (Int32, Int32), i1, i2)
end

function setres3d(x1::Float64, x2::Float64, x3::Float64)
  ccall((:setres3d, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
              x1, x2, x3)
end

function setrgb(x1::Float64, x2::Float64, x3::Float64)
  ccall((:setrgb, "libdislin_d.so"), Cvoid, (Float64, Float64, Float64), 
              x1, x2, x3)
end

function setscl(xray::Vector{Float64}, n::Int64, s::String)
  ccall((:setscl, "libdislin_d.so"), Cvoid, 
          (Ptr{Float64}, Int32, Ptr{UInt8}), xray, n, s)
end

function setvlt(s::String)
  ccall((:setvlt, "libdislin_d.so"), Cvoid, (Ptr{UInt8},), s)
end

function setxid(i::Int64, s::String)
  ccall((:setxid, "libdislin_d.so"), Cvoid, (Int32, Ptr{UInt8}), i, s)
end

function shdafr(i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, n::Int64)
  ccall((:shdafr, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), i1ray, i2ray, i3ray, n)
end

function shdasi(i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, n::Int64)
  ccall((:shdasi, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), i1ray, i2ray, i3ray, n)
end

function shdaus(i1ray::Vector{Int32}, i2ray::Vector{Int32}, 
                i3ray::Vector{Int32}, n::Int64)
  ccall((:shdaus, "libdislin_d.so"), Cvoid, 
         (Ptr{Int32}, Ptr{Int32}, Ptr{Int32}, Int32), i1ray, i2ray, i3ray, n)
end

function shdcha()
  ccall((:shdcha, "libdislin_d.so"), Cvoid, ())
end

function shdcrv(x1ray::Vector{Float64}, y1ray::Vector{Float64}, n1::Int64,
                x2ray::Vector{Float64}, y2ray::Vector{Float64}, n2::Int64)
  ccall((:shdcrv, "libdislin_d.so"), Cvoid, (Ptr{Float64}, Ptr{Float64}, 
          Int32, Ptr{Float64}, Ptr{Float64}, Int32), 
          x1ray, y1ray, n1, x2ray, y2ray, n2)
end
